syntax = "proto3";

package proto;

service User {
    rpc UserLogin(LoginReq) returns (LoginRes){};
    rpc UserRegister(RegisterReq) returns (RegisterRes){};
}

message AccessToken {
    string token = 1;
}
message LoginReq {
    string username = 1;
    string password = 2;
}

message RegisterReq {
    string username = 1;
    string email = 6;
    string password = 3;
    string phone = 4;
    string address = 5;
}

message LoginRes {
    bool ok = 1;
    AccessToken data = 2;
}

message RegisterRes {
    bool ok = 1;
    AccessToken data = 2;
}